<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
            android:id="@+id/navigation_schedule"
            android:icon="@drawable/ic_baseline_schedule"
            android:title="@string/navigation_schedule"/>

    <item
            android:id="@+id/navigation_favourites"
            android:icon="@drawable/ic_baseline_favourite"
            android:title="@string/navigation_favourites"/>

    <item
            android:id="@+id/navigation_speakers"
            android:icon="@drawable/ic_baseline_speaker"
            android:title="@string/navigation_speakers"/>

    <item
            android:id="@+id/navigation_venue"
            android:icon="@drawable/ic_baseline_venue"
            android:title="@string/navigation_venue"/>
</menu>