<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.design.widget.CollapsingToolbarLayout
                android:id="@+id/collapsing_toolbar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_scrollFlags="scroll|exitUntilCollapsed"
                app:contentScrim="?attr/colorPrimary"
                app:expandedTitleMarginStart="48dp"
                app:expandedTitleMarginEnd="64dp">

            <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/header_droidcon"
                    android:scaleType="centerCrop"
                    android:contentDescription="@string/hint_event_image"
                    app:layout_collapseMode="parallax" />

            <android.support.v7.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                    app:layout_collapseMode="pin" />

        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="?attr/actionBarSize"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:paddingTop="8dp"
                android:orientation="vertical">

            <TextView
                    android:id="@+id/tv_location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:drawableStart="@drawable/ic_filled_place"
                    android:drawablePadding="16dp"
                    android:text="@string/venue_location"
                    android:textSize="17sp"
                    android:textColor="?android:textColorPrimary"
                    android:fontFamily="@font/open_sans"/>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="45dp"
                    android:layout_marginBottom="45dp"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal">

                <TextView
                        android:id="@+id/tv_maps"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="26dp"
                        android:drawableTop="@drawable/ic_filled_map"
                        android:drawablePadding="8dp"
                        android:text="@string/venue_maps"
                        android:textSize="17sp"
                        android:textColor="@color/colorPrimary"
                        android:fontFamily="@font/open_sans"/>

                <TextView
                        android:id="@+id/tv_website"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableTop="@drawable/ic_filled_website"
                        android:drawablePadding="8dp"
                        android:text="@string/venue_website"
                        android:textSize="17sp"
                        android:textColor="@color/colorPrimary"
                        android:fontFamily="@font/open_sans"/>

                <TextView
                        android:id="@+id/tv_twitter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="26dp"
                        android:drawableTop="@drawable/ic_filled_twitter"
                        android:drawablePadding="8dp"
                        android:text="@string/venue_twitter"
                        android:textSize="17sp"
                        android:textColor="@color/colorPrimary"
                        android:fontFamily="@font/open_sans"/>
            </LinearLayout>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@string/venue_information"
                    android:textSize="17sp"
                    android:textColor="?android:textColorPrimary"
                    android:fontFamily="@font/open_sans"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@string/venue_information_description"
                    android:textSize="15sp"
                    android:textColor="?android:textColorSecondary"
                    android:fontFamily="@font/open_sans"/>

            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="275dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="45dp"
                    android:src="@drawable/location_droidcon"
                    android:scaleType="centerCrop"
                    android:contentDescription="@string/venue_information_description"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@string/app_title"
                    android:textSize="17sp"
                    android:textColor="?android:textColorPrimary"
                    android:fontFamily="@font/open_sans"/>

            <TextView
                    android:id="@+id/tv_app_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_description"
                    android:textSize="15sp"
                    android:textColor="?android:textColorSecondary"
                    android:fontFamily="@font/open_sans"/>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</android.support.design.widget.CoordinatorLayout>