<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.design.widget.CollapsingToolbarLayout
                android:id="@+id/collapsing_toolbar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_scrollFlags="scroll|exitUntilCollapsed|snap"
                app:contentScrim="?attr/colorPrimary"
                app:expandedTitleMarginStart="48dp"
                app:expandedTitleMarginEnd="64dp">

            <ImageView
                    android:id="@+id/iv_speaker_photo"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/header_droidcon"
                    android:scaleType="centerCrop"
                    android:contentDescription="@string/hint_speaker_image"
                    app:layout_collapseMode="parallax" />

            <android.support.v7.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                    app:layout_collapseMode="pin" />

        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="16dp"
                android:paddingTop="8dp"
                android:orientation="vertical">

            <TextView
                    android:id="@+id/tv_talk_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hint_session_title"
                    android:textSize="25sp"
                    android:textColor="?android:textColorPrimary"
                    android:fontFamily="@font/open_sans"/>

            <TextView
                    android:id="@+id/tv_talk_schedule"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:text="@string/hint_session_time"
                    android:textSize="17sp"
                    android:textColor="?android:textColorPrimary"
                    android:fontFamily="@font/open_sans"/>

            <TextView
                    android:id="@+id/tv_talk_room"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_filled_room"
                    android:drawablePadding="8dp"
                    android:text="@string/hint_session_room"
                    android:textSize="17sp"
                    android:textColor="?android:textColorPrimary"
                    android:fontFamily="@font/open_sans"/>

            <TextView
                    android:id="@+id/tv_talk_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:text="@string/hint_session_description"
                    android:textSize="17sp"
                    android:textColor="?android:textColorPrimary"
                    android:fontFamily="@font/open_sans"/>

            <TextView
                    android:id="@+id/tv_section_speakers"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:text="@string/session_speakers"
                    android:textAllCaps="true"
                    android:textSize="17sp"
                    android:textColor="?android:textColorSecondary"
                    android:textStyle="bold"
                    android:fontFamily="@font/open_sans"/>

            <android.support.v7.widget.RecyclerView
                    android:id="@+id/rv_content"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</android.support.design.widget.CoordinatorLayout>